...
                modifier = Modifier.fillMaxWidth(),
                verticalAlignment = Alignment.CenterVertically,
                horizontalArrangement = Arrangement.SpaceBetween,
            ) {
                Column {
                    Text(
                        "Selected payment method",
                        color = MaterialTheme.colors.onBackground,
                        fontWeight = FontWeight.Bold,
                    )
                    Text(
                        "${state.currentCustomer}",
                        color = MaterialTheme.colors.onBackground,
...
                                painter = it.iconPainter,
                                contentDescription = "Payment Method Icon",
                                modifier = Modifier.height(32.dp)
                            )
                        }
                        Text(
                            text = state.selection?.paymentOption?.label ?: "Select",
                            color = MaterialTheme.colors.onBackground,
                        )
                    }
                }
            }
            state.errorMessage?.let {
...
                checked = configurationState.isExistingCustomer,
                onCheckedChange = {
                    viewActionHandler(CustomerSheetPlaygroundViewAction.ToggleExistingCustomer)
                },
                modifier = Modifier
                    .semantics { testTagsAsResourceId = true }
                    .testTag("CUSTOMER_SHEET_PLAYGROUND_EXISTING_CUSTOMER")
            )
        }
    }

    @Suppress("LongMethod")
    @Composable
...
