...
    <string name="paymentsheet_custom_title">FlowController</string>
    <string name="paymentsheet_custom_subtitle">A more advanced integration with greater flexibility</string>
    <string name="paymentsheet_serverside_confirmation_title">PaymentSheet with server-side confirmation</string>
    <string name="paymentsheet_custom_serverside_confirmation_title">FlowController with server-side confirmation</string>
    <string name="paymentsheet_serverside_confirmation_subtitle">Create and confirm the payment or setup intent on your own backend</string>
    <string name="customersheet_example_title">CustomerSheet Example</string>
    <string name="customersheet_playground_title">CustomerSheet Playground</string>
    <string name="customer_subtitle">Manage a customer</string>
    <string name="embedded_example_title">Embedded Payment Element Example</string>
    <string name="embedded_subtitle">Our simplest integration</string>
    <string name="address_element_title">Address Element</string>
    <string name="address_element_subtitle">Collect a customer\'s shipping address</string>
    <string name="beta_badge_label">This is currently in beta</string>
...
