appId: com.stripe.android.paymentsheet.example
---
- launchApp
- startRecording: /tmp/test_results/newcustomer-card
# Android specific: Navigate to example
- scrollUntilVisible:
    element: "CustomerSheet Playground"
- waitForAnimationToEnd:
    timeout: 5000
- tapOn: "CustomerSheet Playground"
- waitForAnimationToEnd:
    timeout: 5000
- extendedWaitUntil:
    visible: "Selected payment method"
    timeout: 60000
# Use a new customer
- tapOn:
    id: "CUSTOMER_SHEET_PLAYGROUND_EXISTING_CUSTOMER"
- extendedWaitUntil:
      visible: "Select"
      timeout: 60000
- tapOn: "Select"
- extendedWaitUntil:
    visible:
      text: "Manage your payment methods"
      optional: true
    timeout: 60000
- tapOn:
    id: "AddCard"
    optional: true
- extendedWaitUntil:
    visible: "Save a new payment method"
    timeout: 60000
# ENTER CARD DETAILS
- runFlow:
    file: ./card/subflow-card-details.yaml
    env:
      CARD_NUMBER: 4242424242424242
- hideKeyboard
- tapOn: "Save"
- waitForAnimationToEnd:
    timeout: 5000
- assertVisible:
    id: "PAYMENT_OPTION_CARD_TEST_TAG_···· 4242"
- tapOn: "Confirm"
- assertVisible: "···· 4242"
- stopRecording
